c4prj1_deck/grade.txt
Grading at Sat 22 Oct 2022 02:09:52 AM UTC
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:182:1: error: ISO C forbids nested functions [-Werror=pedantic]
  182 | void copy_straight(card_t ** to, deck_t *from, size_t ind, suit_t fs, size_t count) {
      | ^~~~
eval.c:207:1: error: ISO C forbids nested functions [-Werror=pedantic]
  207 | int find_straight(deck_t * hand, suit_t fs, hand_eval_t * ans) {
      | ^~~
eval.c:239:1: error: ISO C forbids nested functions [-Werror=pedantic]
  239 | hand_eval_t evaluate_hand(deck_t * hand) {
      | ^~~~~~~~~~~
eval.c:305:1: error: expected declaration or statement at end of input
  305 | }
      | ^
eval.c:306: error: control reaches end of non-void function [-Werror=return-type]
  306 | // clang-format on
      | 
At top level:
eval.c:239:13: error: ‘evaluate_hand’ defined but not used [-Werror=unused-function]
  239 | hand_eval_t evaluate_hand(deck_t * hand) {
      |             ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
